# claude-desktop-tauri

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.claude/: settings.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chrome_compat.rs  desktop_api.rs  error.rs  lib.rs  main.rs
src-tauri/src/api/: claude.rs  mod.rs
src-tauri/src/auth/: mod.rs  oauth.rs
src-tauri/src/commands/: chat.rs  mod.rs  storage.rs
src-tauri/src/db/: mod.rs
src-tauri/src/extensions/: mod.rs
src-tauri/src/mcp/: client.rs  commands.rs  config.rs  manager.rs  mod.rs  proxy.rs
src-tauri/src/models/: mod.rs
src-tauri/src/webview/: mod.rs
src-tauri/src/webview/scripts/: 01_polyfills.js  02_fake_port.js  03_electron_api.js  04_mcp_bridge.js  05_mcp_manager.js  06_file_handling.js
